ranger/src/snapshots/ranger__configuration__tests__can_parse_the_configuration_with_mailer.snap
---
source: ranger/src/configuration.rs
expression: configuration
---
host: localhost
port: 8080
deployers:
  my-machiner-deployer: "http://ranger-vmware-machiner:9999"
  my-switch-deployer: "http://ranger-vmware-switcher:9999"
  ungrouped-deployer: "http://some-vmware-deployer:9999"
default_deployment_group: my-cool-group
deployment_groups:
  my-cool-group:
    - my-machiner-deployer
    - my-switch-deployer
database_url: "mysql://user:pass@mariadb:3306/app-database"
mailer_server_address: smtp.mail.com
mailer_username: username
mailer_password: password

